# soundbase

./: .gitignore  Cargo.toml  config.json
cli/: Cargo.toml
cli/src/: main.rs
fb-schemas/: analytics_protocol.fbs  song_like_protocol.fbs
gui/: Cargo.toml  build.rs
gui/res/: list_albums_grid_item.ui  list_albums_grid_item_element.ui  list_albums_page.ui  list_track_row.ui  list_track_row_item.ui  list_tracks_page.ui  main_window.ui  playback_page.ui  playback_pane.ui  resources.gresource.xml
gui/src/: application.rs  config.rs  control_pane.rs  main.rs  tracks_page.rs  utils.rs
gui/src/api/: api_base.rs  library_api.rs  mod.rs  playback_api.rs
gui/src/model/: mod.rs  playback_state.rs  simple_album_data.rs  track_data.rs
gui/src/model/TrackRowData/: imp.rs  mod.rs
gui/src/ui/: list_albums_item_element.rs  list_albums_page.rs  list_track_row.rs  list_tracks_page.rs  main_window.rs  mod.rs  playback_page.rs  playback_pane.rs
migrations/2022-01-03-193128_init/: up.sql
proto/: entities.proto  library.proto  playback.proto  proposals.proto  services.proto  spotify.proto  tasks.proto
res/cron/: _crontab
res/systemd/: _soundbase.service
server/: Cargo.toml  build.rs  diesel.toml
server/migrations/2022-01-03-193128_init/: down.sql  up.sql
server/src/: main.rs  string_utils.rs
server/src/api_handler/: mod.rs  track_proposals.rs
server/src/db_new/: album.rs  album_artist.rs  album_of_week.rs  artist.rs  artist_genre.rs  charts_of_week.rs  genre.rs  mod.rs  schema.rs  track.rs  track_artist.rs  track_fav_proposal.rs
server/src/model/: library_models.rs  mod.rs
server/src/playback/: local_player.rs  mod.rs  spotify_player.rs
server/src/services/: library.rs  mod.rs  playback.rs  proposals.rs  spotify_auth.rs  tasks.rs
server/src/spotify/: db_utils.rs  mod.rs
server/src/tasks/: aow_rock_antenne.rs  mod.rs  spotify_import.rs  tow_rock_antenne.rs
src/: album_of_week.rs  analytics.rs  analytics_handler.rs  analytics_protocol_generated.rs  db.rs  error.rs  main.rs  song_db.rs  song_like.rs  song_like_handler.rs  song_like_protocol_generated.rs  top20_of_week.rs
src/api_handler/: library.rs  mod.rs  song_like.rs  tasks.rs  track_proposals.rs
src/db/: album.rs  album_of_week.rs  analytics.rs  artist.rs  db_error.rs  mod.rs  song.rs  song_history.rs  top_of_the_week.rs  util.rs
src/db_new/: album.rs  album_artist.rs  album_of_week.rs  artist.rs  artist_genre.rs  charts_of_week.rs  db_error.rs  genre.rs  mod.rs  models.rs  schema.rs  track.rs  track_artist.rs  track_fav_proposal.rs
src/fetch/: aow_rock_antenne.rs  mod.rs  tow_rock_antenne.rs
src/handlers/: album_of_week.rs  analytics_handler.rs  mod.rs  song_like_handler.rs  spotify_handler.rs  top20_of_week.rs
src/model/: analytics.rs  mod.rs  song_like.rs  spotify.rs
src/spotify/: db_utils.rs  mod.rs
src/tasks/: aow_rock_antenne.rs  mod.rs  spotify_import.rs  tow_rock_antenne.rs
