[package]
name = "soundbase"
version = "0.1.0"
authors = ["Leon Steiner <leontsteiner@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flatbuffers = "0.8"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
bytes = "1.0.1"
http = "0.2"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
r2d2 = "0.8"
r2d2_sqlite = "0.19"
rusqlite = { version = "0.26", features = ["bundled"]}
regex = "1.5"
reqwest = { version = "0.11"}
scraper = "0.12"
strsim = "0.10"
aspotify = "0.7"
enum_derive = "0.1.7"
url = "2.2"