[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "soundbase-gui"
path = "src/main.rs"


[dependencies]
relm4 = { version = "0.4", features = [ "libadwaita" ] }
relm4-macros = "0.4"
relm4-components = "0.4"
tracker = "0.1"
once_cell = "1.9.0"
prost = "0.9"
prost-types = "0.9"
tokio = { version = "1", features = ["full"] }
tonic = { version = "0.6"}

[build-dependencies]
tonic-build = "0.6"